--- a/FilipeNobrega/Views/Experience/Experience.storyboard
+++ b/FilipeNobrega/Views/Experience/Experience.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LR6-yN-j6C">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -16,29 +16,47 @@
             <objects>
                 <viewController id="LR6-yN-j6C" customClass="ExperienceViewController" customModule="FilipeNobrega" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rF5-0Y-kKE">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4gp-7T-EwT">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4gp-7T-EwT">
+                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="44" maxY="0.0"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="LuV-y1-xAI">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="211"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PRa-t9-nzA">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
-                                            <color key="backgroundColor" red="1" green="0.15663461538461537" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QIO-CQ-wez">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="196.33333333333334"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PRa-t9-nzA">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="165.33333333333334"/>
+                                                    <color key="backgroundColor" red="1" green="0.15663461538461537" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="PRa-t9-nzA" secondAttribute="height" multiplier="5:2" id="Ne4-XF-B3d"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="368-aU-On2">
+                                                    <rect key="frame" x="186" y="175.33333333333334" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="Gib-UD-qkI"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" secondItem="PRa-t9-nzA" secondAttribute="height" multiplier="5:2" id="Ne4-XF-B3d"/>
+                                                <constraint firstItem="PRa-t9-nzA" firstAttribute="top" secondItem="QIO-CQ-wez" secondAttribute="top" id="74R-fj-PtK"/>
+                                                <constraint firstAttribute="trailing" secondItem="PRa-t9-nzA" secondAttribute="trailing" id="BM2-Sc-AZw"/>
+                                                <constraint firstItem="368-aU-On2" firstAttribute="top" secondItem="PRa-t9-nzA" secondAttribute="bottom" constant="10" id="EjI-2J-mLL"/>
+                                                <constraint firstItem="PRa-t9-nzA" firstAttribute="leading" secondItem="QIO-CQ-wez" secondAttribute="leading" id="K9X-du-OU4"/>
+                                                <constraint firstItem="368-aU-On2" firstAttribute="centerX" secondItem="QIO-CQ-wez" secondAttribute="centerX" id="fHq-Ga-GZ4"/>
+                                                <constraint firstAttribute="bottom" secondItem="368-aU-On2" secondAttribute="bottom" id="rQi-pK-mGn"/>
                                             </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="368-aU-On2">
-                                            <rect key="frame" x="166.5" y="160" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        </view>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Axa-Mp-LtQ">
                                             <rect key="frame" x="147" y="24" width="46" height="30"/>
                                             <state key="normal" title="Button"/>
@@ -49,29 +67,26 @@
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstItem="PRa-t9-nzA" firstAttribute="top" secondItem="LuV-y1-xAI" secondAttribute="top" id="01j-tl-OkW"/>
                                         <constraint firstItem="Axa-Mp-LtQ" firstAttribute="top" secondItem="LuV-y1-xAI" secondAttribute="top" constant="24" id="9sa-CM-vt0"/>
-                                        <constraint firstAttribute="bottom" secondItem="368-aU-On2" secondAttribute="bottom" constant="30" id="JEa-Mr-n40"/>
-                                        <constraint firstAttribute="trailing" secondItem="PRa-t9-nzA" secondAttribute="trailing" id="Njv-8b-zDj"/>
-                                        <constraint firstItem="368-aU-On2" firstAttribute="top" secondItem="PRa-t9-nzA" secondAttribute="bottom" constant="10" id="Vlo-vv-bCZ"/>
-                                        <constraint firstItem="PRa-t9-nzA" firstAttribute="leading" secondItem="LuV-y1-xAI" secondAttribute="leading" id="XcE-1X-sxw"/>
+                                        <constraint firstItem="QIO-CQ-wez" firstAttribute="leading" secondItem="LuV-y1-xAI" secondAttribute="leading" id="OKa-DD-5vI"/>
+                                        <constraint firstItem="QIO-CQ-wez" firstAttribute="top" secondItem="LuV-y1-xAI" secondAttribute="top" id="cCs-Cn-sQA"/>
+                                        <constraint firstAttribute="trailing" secondItem="QIO-CQ-wez" secondAttribute="trailing" id="ihZ-pA-p1Y"/>
                                         <constraint firstItem="Axa-Mp-LtQ" firstAttribute="leading" secondItem="LuV-y1-xAI" secondAttribute="leading" constant="147" id="x0o-Ol-m2K"/>
-                                        <constraint firstItem="368-aU-On2" firstAttribute="centerX" secondItem="LuV-y1-xAI" secondAttribute="centerX" id="zg9-Sw-UNI"/>
                                     </constraints>
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="experienceTableViewCell" rowHeight="160" id="xUF-D6-IbX" customClass="ExperienceTableViewCell" customModule="FilipeNobrega" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="239" width="320" height="160"/>
+                                        <rect key="frame" x="0.0" y="328" width="414" height="160"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xUF-D6-IbX" id="PUv-Re-kUJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="160"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rdS-WQ-Rr8">
-                                                    <rect key="frame" x="15" y="5" width="290" height="149.5"/>
+                                                    <rect key="frame" x="15" y="5" width="384" height="149.66666666666666"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Software enginereer @ UFRN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZW6-u7-jCn">
-                                                            <rect key="frame" x="65" y="20" width="210" height="14.5"/>
+                                                            <rect key="frame" x="65" y="20" width="304" height="14.666666666666664"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -84,14 +99,14 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TlR-Wv-fZl">
-                                                            <rect key="frame" x="15" y="75" width="260" height="59.5"/>
-                                                            <mutableString key="text"> • Lorem ipsum dolor sit amet, consectetur adipiscing elit. In augue dolor, semper quis aliquet sed, porta sit amet nunc. Pellentesque non arcu a sapien dictum sollicitudin.   • Lorem ipsum dolor sit amet, consectetur adipiscing elit. In augue dolor, semper quis aliquet sed, porta sit amet nunc. Pellentesque non arcu a sapien dictum sollicitudin.   • Lorem ipsum dolor sit amet, consectetur adipiscing elit. In augue dolor, semper quis aliquet sed, porta sit amet nunc. Pellentesque non arcu a sapien dictum sollicitudin.  </mutableString>
+                                                            <rect key="frame" x="15" y="75" width="354" height="59.666666666666657"/>
+                                                            <string key="text"> • Lorem ipsum dolor sit amet, consectetur adipiscing elit. In augue dolor, semper quis aliquet sed, porta sit amet nunc. Pellentesque non arcu a sapien dictum sollicitudin.   • Lorem ipsum dolor sit amet, consectetur adipiscing elit. In augue dolor, semper quis aliquet sed, porta sit amet nunc. Pellentesque non arcu a sapien dictum sollicitudin.   • Lorem ipsum dolor sit amet, consectetur adipiscing elit. In augue dolor, semper quis aliquet sed, porta sit amet nunc. Pellentesque non arcu a sapien dictum sollicitudin.  </string>
                                                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jun 2010 - Jun 2011 (1 year)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hCa-ax-xPo">
-                                                            <rect key="frame" x="65" y="38" width="210" height="12"/>
+                                                            <rect key="frame" x="65" y="38" width="304" height="12"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -139,13 +154,14 @@
                         <viewLayoutGuide key="safeArea" id="ycQ-MC-RWd"/>
                     </view>
                     <connections>
+                        <outlet property="containerView" destination="QIO-CQ-wez" id="nUa-v6-4IS"/>
                         <outlet property="headerImageView" destination="PRa-t9-nzA" id="NHJ-Kw-LdP"/>
                         <outlet property="tableView" destination="4gp-7T-EwT" id="Jiv-GO-qpg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="phf-cs-sZK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="597.60000000000002" y="56.221889055472268"/>
+            <point key="canvasLocation" x="597.10144927536237" y="55.434782608695656"/>
         </scene>
     </scenes>
     <resources>
